--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Three Towers Game",
   "main": "index.js",
   "scripts": {
-    "tdd": "nodemon --exec mocha spec/**/**/*.test.js",
-	"test": "mocha spec/**/*.test.js"
+    "nodemon": "nodemon --exec mocha spec/**/**/*.test.js",
+    "tdd": "gulp watch",
+    "test": "mocha spec/**/*.test.js"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,16 @@
   "homepage": "https://github.com/pxai/three_towers_game#readme",
   "devDependencies": {
     "chai": "^4.1.2",
+    "eslint": "^5.0.1",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
+    "gulp": "^3.9.1",
+    "gulp-eslint": "^5.0.0",
+    "gulp-mocha": "^6.0.0",
+    "gulp-util": "^3.0.8",
     "mocha": "^5.2.0"
   }
 }
