--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "gulp-eslint": "^5.0.0",
     "gulp-mocha": "^6.0.0",
     "gulp-util": "^3.0.8",
-    "mocha": "^5.2.0"
+    "mocha": "^5.2.0",
+    "sinon": "^6.1.2"
   }
 }
